--- a/app/src/main/res/layout/activity_main_alt.xml
+++ b/app/src/main/res/layout/activity_main_alt.xml
@@ -82,4 +82,15 @@
         app:spanCount="2"
         tools:listitem="@layout/grid_item"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="32dp"
+        android:tint="442c2e"
+        android:id="@+id/view_cart_fab"
+        android:src="@drawable/ic_shopping_cart_black_24dp"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
