--- a/app/src/main/res/layout/activity_main_alt.xml
+++ b/app/src/main/res/layout/activity_main_alt.xml
@@ -88,7 +88,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="32dp"
-        android:tint="442c2e"
+        android:tint="#442c2e"
         android:id="@+id/view_cart_fab"
         android:src="@drawable/ic_shopping_cart_black_24dp"
         />
