--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,4 +76,20 @@
         app:spanCount="2"
         tools:listitem="@layout/grid_item"/>
 
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="64dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:elevation="8dp"
+        app:cornerRadius="64dp"
+        android:visibility="gone"
+        android:text="View Cart"
+        android:textColor="#442c2e"
+        android:layout_margin="16dp"
+        app:iconTint="#442c2e"
+        android:id="@+id/view_cart_button"
+        app:icon="@drawable/ic_shopping_cart_black_24dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
