--- a/app/src/main/res/layout/activity_main_alt.xml
+++ b/app/src/main/res/layout/activity_main_alt.xml
@@ -75,22 +75,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         android:orientation="vertical"
         app:spanCount="2"
         tools:listitem="@layout/grid_item"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_height="64dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="32dp"
-        android:tint="#442c2e"
-        android:id="@+id/view_cart_fab"
-        android:src="@drawable/ic_shopping_cart_black_24dp"
-        />
+        android:elevation="8dp"
+        app:cornerRadius="64dp"
+        android:text="View Cart"
+        android:textColor="#442c2e"
+        android:layout_margin="16dp"
+        app:iconTint="#442c2e"
+        android:id="@+id/view_cart_button"
+        app:icon="@drawable/ic_shopping_cart_black_24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
