--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -10,4 +10,9 @@
     app:cardUseCompatPadding="true"
     android:background="@color/colorPrimaryDark">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="8dp"
+        android:id="@+id/item_image"/>
 </androidx.cardview.widget.CardView>
